@@ -1,7 +1,8 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
-    * Changed default log and file size limiations from 2 GiB (2*1024**3) to 2 GB (2e9).
+    * Changed default log and file size limitations from 2 GiB (2*1024**3) to 2 GB (2e9).
       Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
+    * Clarified that the `filter` option only applies to model variables.
 
 --- PyFMI-2.16.2 ---
     * Increased robustness of getting the `supports` attribute from ResultHandlers.
